deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: date-consume
  name: date-consume
  namespace: default
spec:
  replicas: 2 #CHANGE
  minReadySeconds: 45
  selector:
    matchLabels:
      app: date-consume
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: date-consume
    spec:
      containers:
      - image: chalkeavi6/date-consume:0.0.11-SNAPSHOT #CHANGE
        imagePullPolicy: IfNotPresent
        name: date-consume
        #env:
         # - name: DATE_SERVICE_URI
          #  value: http://date-service1
#          - name: SPRING_PROFILES_ACTIVE
#            value: kubernetes
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels: #PODS
    app: date-consume
  name: date-consume
  namespace: default
spec:
  ports:
  - # nodePort: 30701 #CHANGE
    port: 8200 #CHANGE
    protocol: TCP
    targetPort: 8200 #CHANGE
  selector:
    app: date-consume
  sessionAffinity: None #CHANGE
  type: NodePort
